stuff/yaml/iteration-5/myapp-deployment-config.yaml
  apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: myapp
    name: myapp-dc
  spec:
    replicas: 1
    selector:
      app: myapp
      deploymentconfig: myapp
    template:
      metadata:
        labels:
          app: myapp
          deploymentconfig: myapp
      spec:
        containers:
        - image: twalter/openshift-nginx:stable
          imagePullPolicy: Always
          name: myapp-container
          ports:
          - containerPort: 80
            protocol: TCP
          - containerPort: 8081
            protocol: TCP
      restartPolicy: Always
    test: false
    triggers:
    - type: ConfigChange
